plugins {
    id 'fabric-loom' version "${loom_version}"
    id 'maven-publish'
}

version = "${project.mod_version}+${project.minecraft_version}"
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    // Add repositories to retrieve artifacts from in here.
    // You should only use this when depending on other mods because
    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
    // for more information about repositories.
}

loom {
    mixin {
        //defaultRefmapName.set("mixins.rsm.refmap.json")
        useLegacyMixinAp = true
    }
    accessWidenerPath = file("src/main/resources/rsm.accesswidener")
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Fabric API. This is technically optional, but you probably want it anyway.
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    def lwjglVersion = property("minecraft_lwjgl_version")
    modImplementation "org.lwjgl:lwjgl-nanovg:$lwjglVersion"
    include "org.lwjgl:lwjgl-nanovg:$lwjglVersion"

    ["windows", "linux", "macos", "macos-arm64"].each { os ->
        modImplementation "org.lwjgl:lwjgl-nanovg:$lwjglVersion:natives-$os"
        include "org.lwjgl:lwjgl-nanovg:$lwjglVersion:natives-$os"
    }

    modImplementation 'io.github.classgraph:classgraph:4.8.174'
    include 'io.github.classgraph:classgraph:4.8.174'

    annotationProcessor "org.projectlombok:lombok:1.18.38"
    compileOnly "org.projectlombok:lombok:1.18.38"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    inputs.property "archivesName", project.base.archivesName

    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}"}
    }
}

tasks.register('deobfJar', Jar) {
    from sourceSets.main.output
}

// configure the maven publication
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifact deobfJar
            groupId = project.maven_group
            artifactId = project.archives_base_name
            version = project.mod_version
        }
    }

    repositories {
        mavenLocal()
    }
}